# labs

./: .dockerignore  .gitignore  .jscpd.jsonc  .mise.toml  .npmrc  .oxfmtrc.json  .oxlintrc.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Caddyfile  Dockerfile  Makefile  RAILWAY_DEPLOYMENT.md  README.md  biome.json  docker-compose.yml  env.example  knip.json  knip.jsonc  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ports.json  railway.json  railway.toml  release-please-config.json  tsconfig.base.json  turbo.json
.claude/: launch.json
.github/: copilot-instructions.md  dependabot.yml
.jscpd/: jscpd-report.json
.kernel/: README.md  project.md
_scratchpad/: career.resume.animated.tsx  fizzbuzz.ts  inheritance.js  inheritance.ts  keypress.html  llm-receipt.tsx  (+2 more)
_scratchpad/recommendation-system/: .gitignore  ARCHITECTURE.md  pyproject.toml  rec-sys-README.md
_scratchpad/recommendation-system/notebooks/: 01_explore_the_data.ipynb  02_build_the_matrix.ipynb  03_train_the_model.ipynb  04_serve_recommendations.ipynb
_scratchpad/recommendation-system/scripts/: build_notebooks.py  run_batch.py
_scratchpad/recommendation-system/src/rec_sys/: __init__.py  cli.py  persistence.py
_scratchpad/recommendation-system/src/rec_sys.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
_scratchpad/recommendation-system/src/rec_sys/data/: __init__.py  loader.py  schema.py
_scratchpad/recommendation-system/src/rec_sys/model/: __init__.py  cold_start.py  embeddings.py  trainer.py
_scratchpad/recommendation-system/src/rec_sys/pipeline/: __init__.py  batch.py  serving.py
_scratchpad/recommendation-system/src/rec_sys/storage/: __init__.py  user_cache.py  vector_db.py
_scratchpad/recommendation-system/tests/: conftest.py
_scratchpad/recommendation-system/tests/data/: test_loader.py
_scratchpad/recommendation-system/tests/model/: test_cold_start.py  test_embeddings.py  test_trainer.py
_scratchpad/recommendation-system/tests/pipeline/: test_batch.py  test_serving.py
_scratchpad/recommendation-system/tests/storage/: test_user_cache.py  test_vector_db.py
apps/banking/: .coverage  .dockerignore  Dockerfile  pyproject.toml  requirements.txt
apps/banking/misc/: __init__.py
apps/banking/tests/: test_banking.py
scripts/seed-tfl/: Cargo.toml
scripts/seed-tfl/src/: main.rs
tools/: labstools.rb  pyproject.toml
tools/earth/: README.md  generate-imagery.mjs  generate-terrain.mjs
tools/earth/source/: README.md
tools/labstools/: tiktoken_count.py
tools/scripts/: populate-tfl.ts
(+1735 files in other folders)
