[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "labstools"
version = "0.1.0"
description = "Labs team CLI tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = ["tiktoken>=0.12.0"]

[project.scripts]
tiktoken-count = "labstools.tiktoken_count:main"

[project.urls]
Homepage = "https://github.com/ponti-labs/labs-tools"
