[tool.poetry]
name = "python-boilerplate"
version = "0.1.0"
description = ""
authors = ["Charlie <cj@ponti.io>"]

[tool.poetry.dependencies]
python = "3.6.9"
pytest = "^5.3.5"
python-dotenv = "^0.11.0"
coverage = "^5.0.3"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
